Added code to set up study files

--- a/notebooks/Preprocessing.ipynb
+++ b/notebooks/Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "french-taiwan",
+   "id": "stuffed-likelihood",
    "metadata": {},
    "source": [
     "# Reading networks and preparing file inputs for goatools\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sticky-designer",
+   "id": "competent-insulation",
    "metadata": {},
    "source": [
     "I'm sure you don't have to reconstruct the graph if you just want to check for GO enrichment at each cluster, but it might be useful to look at the structure of the graph as well (e.g. neighboring clusters, looking at how many edges separate some clusters, etc)"
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "objective-phoenix",
+   "id": "opening-galaxy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "apparent-growing",
+   "id": "dramatic-zealand",
    "metadata": {},
    "source": [
     "Let's read a graph and draw it"
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "interior-catering",
+   "id": "local-medium",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "knowing-onion",
+   "id": "royal-pennsylvania",
    "metadata": {},
    "source": [
     "Let's take a look at what attributes our nodes have now"
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "japanese-disease",
+   "id": "alpine-harvest",
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pretty-reservoir",
+   "id": "daily-printer",
    "metadata": {},
    "source": [
     "So from this we can see each node has a bunch of attributes. The first being orthogroups, which is a list of what orthogroups are contained by that node (cluster). Furthermore, we have the corresponding genes for each species belonging to those orthogroups also contained in those nodes."
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "governmental-swaziland",
+   "id": "canadian-change",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "excessive-watershed",
+   "id": "numerical-alpha",
    "metadata": {},
    "outputs": [
     {
@@ -308,22 +308,22 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "tested-trader",
+   "id": "consistent-knock",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['AT4G23860.2',\n",
-       " 'AT1G80880.3',\n",
-       " 'AT5G60870.3',\n",
-       " 'AT5G17210.2',\n",
-       " 'AT1G07010.1',\n",
-       " 'AT3G10960.1',\n",
-       " 'AT5G61970.1',\n",
-       " 'AT1G09060.1',\n",
-       " 'AT4G02460.2',\n",
-       " 'AT2G35350.1']"
+       "['AT4G21300.1',\n",
+       " 'AT2G46890.1',\n",
+       " 'AT4G11911.1',\n",
+       " 'AT1G09410.1',\n",
+       " 'AT4G15510.1',\n",
+       " 'AT3G59550.1',\n",
+       " 'AT4G30940.1',\n",
+       " 'AT4G38490.1',\n",
+       " 'AT3G25580.1',\n",
+       " 'AT2G22250.1']"
       ]
      },
      "execution_count": 6,
@@ -338,21 +338,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "institutional-invalid",
+   "id": "instrumental-practice",
    "metadata": {},
    "source": [
-    "## TO-DO:\n",
-    "- Convert arabidopsis gene names to GO terms\n",
-    "- Output study, population, and gene files\n",
-    "- Run find_enrichment.py on those files"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "renewable-black",
-   "metadata": {},
-   "source": [
-    "# 🚧 Work in progress 🚧\n",
     "ATH_GO_GOSLIM.txt downloaded from The Arabidopsis Information Resource [here](https://www.arabidopsis.org/download/index-auto.jsp?dir=%2Fdownload_files%2FGO_and_PO_Annotations%2FGene_Ontology_Annotations)\n",
     "\n"
    ]
@@ -360,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "public-saver",
+   "id": "productive-onion",
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "sticky-topic",
+   "id": "realistic-bristol",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +724,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "persistent-stand",
+   "id": "retired-undergraduate",
    "metadata": {},
    "source": [
     "Now let's write the population file"
@@ -745,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "emotional-commerce",
+   "id": "blessed-adult",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +744,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "opened-unknown",
+   "id": "cubic-delight",
    "metadata": {},
    "source": [
     "And finally, let's pick use that first node we grabbed earlier to check for enrichment for a study file."
@@ -765,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "caring-george",
+   "id": "affected-status",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "corporate-blackjack",
+   "id": "resident-intelligence",
    "metadata": {},
    "source": [
     "Now we have the required files, we can run `find_enrichment.py` with our respective study, population, and association files\n",
@@ -795,7 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "legislative-steal",
+   "id": "trying-sucking",
    "metadata": {},
    "source": [
     "Now, we need to do this for every node..."
@@ -803,8 +791,93 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "polyphonic-oxford",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path \n",
+    "# Let's make a folder to keep everything that we're working on\n",
+    "results_path = Path('data/find_enrichment_results/FilterBy_family_Cubes_70_Overlap_80/')\n",
+    "results_path.mkdir(parents=True, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "comparable-summer",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def setup_all_files(graph, path, go_table, species='Arabidopsis_thaliana.TAIR10.pep.all'):\n",
+    "    \"\"\"\n",
+    "    graph: Graph to set up all these files for\n",
+    "    path: Path to the parent directory for this analysis\n",
+    "    species: The key corresponding to which species is being looked at for enrichment\n",
+    "    \"\"\"\n",
+    "    # Set up the population file (A list of all the genes)\n",
+    "    all_genes = get_all_present_genes(graph, species)\n",
+    "    with open(f\"{path}/population.txt\", 'w') as fo:\n",
+    "        for gene_name in all_genes:\n",
+    "            fo.write(f\"{name}\\n\")\n",
+    "    \n",
+    "    # Set up the association file (Table mapping genes to GO terms)\n",
+    "    with open(f\"{path}/association.txt\", 'w') as fo:\n",
+    "        for gene_name in all_genes:\n",
+    "            go_term_set = map_gene_to_go(gene_name, go_table)\n",
+    "            fo.write(f\"{name}\\t{';'.join(go_term_set)}\\n\")\n",
+    "    \n",
+    "    # Set up study files for each node\n",
+    "    for node_name, node_attributes in graph.nodes.items():\n",
+    "        with open(f\"{path}/study_{node_name}.txt\", 'w') as fo:\n",
+    "            for gene_name in node_attributes[species]:\n",
+    "                fo.write(f\"{name}\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "subtle-lawrence",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "setup_all_files(example, results_path, go_table, 'Arabidopsis_thaliana.TAIR10.pep.all')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "historic-mercury",
+   "metadata": {},
+   "source": [
+    "# 🚧 Work in progress 🚧"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "remarkable-transport",
+   "metadata": {},
+   "source": [
+    "Now to run `find_enrichment.py` on all these files we've set up. For this we can use a bash script (I'm not sure if there's a "
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "typical-poland",
+   "metadata": {},
+   "source": [
+    "prefix=\"data/find_enrichment_results/FilterBy_family_Cubes_70_Overlap_80\"\n",
+    "for study_file in ${prefix}/study_*\n",
+    "do\n",
+    "    # will fix this output name formatting it's kinda messy as is\n",
+    "    output_name=${study_file}-result\n",
+    "    find_enrichment.py ${study_file} ${prefix}/population.txt ${prefix}/association.txt --outfile ${output_name}\n",
+    "done"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "fatal-banking",
+   "id": "informational-paper",
    "metadata": {},
    "outputs": [],
    "source": []
