Fixed bug in setup_all_files

--- a/notebooks/Preprocessing.ipynb
+++ b/notebooks/Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "stuffed-likelihood",
+   "id": "sustained-attraction",
    "metadata": {},
    "source": [
     "# Reading networks and preparing file inputs for goatools\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "competent-insulation",
+   "id": "alert-samuel",
    "metadata": {},
    "source": [
     "I'm sure you don't have to reconstruct the graph if you just want to check for GO enrichment at each cluster, but it might be useful to look at the structure of the graph as well (e.g. neighboring clusters, looking at how many edges separate some clusters, etc)"
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "opening-galaxy",
+   "id": "electoral-shakespeare",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dramatic-zealand",
+   "id": "multiple-california",
    "metadata": {},
    "source": [
     "Let's read a graph and draw it"
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "local-medium",
+   "id": "handled-psychology",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "royal-pennsylvania",
+   "id": "varying-latex",
    "metadata": {},
    "source": [
     "Let's take a look at what attributes our nodes have now"
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "alpine-harvest",
+   "id": "taken-arrest",
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daily-printer",
+   "id": "opponent-amber",
    "metadata": {},
    "source": [
     "So from this we can see each node has a bunch of attributes. The first being orthogroups, which is a list of what orthogroups are contained by that node (cluster). Furthermore, we have the corresponding genes for each species belonging to those orthogroups also contained in those nodes."
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "canadian-change",
+   "id": "suburban-constant",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "numerical-alpha",
+   "id": "suffering-maryland",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "consistent-knock",
+   "id": "pregnant-cable",
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "instrumental-practice",
+   "id": "nonprofit-audio",
    "metadata": {},
    "source": [
     "ATH_GO_GOSLIM.txt downloaded from The Arabidopsis Information Resource [here](https://www.arabidopsis.org/download/index-auto.jsp?dir=%2Fdownload_files%2FGO_and_PO_Annotations%2FGene_Ontology_Annotations)\n",
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "productive-onion",
+   "id": "centered-million",
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "realistic-bristol",
+   "id": "editorial-moses",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "retired-undergraduate",
+   "id": "recognized-morgan",
    "metadata": {},
    "source": [
     "Now let's write the population file"
@@ -733,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "blessed-adult",
+   "id": "aerial-outdoors",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cubic-delight",
+   "id": "ranking-uniform",
    "metadata": {},
    "source": [
     "And finally, let's pick use that first node we grabbed earlier to check for enrichment for a study file."
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "affected-status",
+   "id": "refined-aside",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "resident-intelligence",
+   "id": "hollywood-guide",
    "metadata": {},
    "source": [
     "Now we have the required files, we can run `find_enrichment.py` with our respective study, population, and association files\n",
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "trying-sucking",
+   "id": "disturbed-anthropology",
    "metadata": {},
    "source": [
     "Now, we need to do this for every node..."
@@ -791,8 +791,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "polyphonic-oxford",
+   "execution_count": 37,
+   "id": "identified-worthy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,8 +804,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "comparable-summer",
+   "execution_count": 38,
+   "id": "efficient-procurement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,25 +819,25 @@
     "    all_genes = get_all_present_genes(graph, species)\n",
     "    with open(f\"{path}/population.txt\", 'w') as fo:\n",
     "        for gene_name in all_genes:\n",
-    "            fo.write(f\"{name}\\n\")\n",
+    "            fo.write(f\"{gene_name}\\n\")\n",
     "    \n",
     "    # Set up the association file (Table mapping genes to GO terms)\n",
     "    with open(f\"{path}/association.txt\", 'w') as fo:\n",
     "        for gene_name in all_genes:\n",
     "            go_term_set = map_gene_to_go(gene_name, go_table)\n",
-    "            fo.write(f\"{name}\\t{';'.join(go_term_set)}\\n\")\n",
+    "            fo.write(f\"{gene_name}\\t{';'.join(go_term_set)}\\n\")\n",
     "    \n",
     "    # Set up study files for each node\n",
     "    for node_name, node_attributes in graph.nodes.items():\n",
     "        with open(f\"{path}/study_{node_name}.txt\", 'w') as fo:\n",
     "            for gene_name in node_attributes[species]:\n",
-    "                fo.write(f\"{name}\\n\")\n"
+    "                fo.write(f\"{gene_name}\\n\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "subtle-lawrence",
+   "execution_count": 39,
+   "id": "comparable-kennedy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "historic-mercury",
+   "id": "aerial-cleaner",
    "metadata": {},
    "source": [
     "# 🚧 Work in progress 🚧"
@@ -854,30 +854,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "remarkable-transport",
+   "id": "competent-appearance",
    "metadata": {},
    "source": [
-    "Now to run `find_enrichment.py` on all these files we've set up. For this we can use a bash script (I'm not sure if there's a "
+    "Now to run `find_enrichment.py` on all these files we've set up. For this we can use a bash script (I'm not sure if there's a way to run this in python?)"
    ]
   },
   {
    "cell_type": "raw",
-   "id": "typical-poland",
+   "id": "vertical-auckland",
    "metadata": {},
    "source": [
     "prefix=\"data/find_enrichment_results/FilterBy_family_Cubes_70_Overlap_80\"\n",
     "for study_file in ${prefix}/study_*\n",
     "do\n",
-    "    # will fix this output name formatting it's kinda messy as is\n",
-    "    output_name=${study_file}-result\n",
-    "    find_enrichment.py ${study_file} ${prefix}/population.txt ${prefix}/association.txt --outfile ${output_name}\n",
+    "    # The otuput file naming is kinda ugly but it works :(\n",
+    "    find_enrichment.py ${study_file} ${prefix}/population.txt ${prefix}/association.txt --outfile ${study_file}_enrichment.tsv\n",
     "done"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "informational-paper",
+   "id": "vital-notice",
    "metadata": {},
    "outputs": [],
    "source": []
